Closed
Bug 460402
Opened 17 years ago
Closed 17 years ago
remove extra noise when there is no document accessible
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: surkov, Assigned: surkov)
Details
Attachments
(1 file)
|
1.92 KB,
patch
|
aaronlev
:
review+
|
Details | Diff | Splinter Review |
when we firefox is started with Jaws then we get in console lot of warnings "No root/doc accessible created" (http://mxr.mozilla.org/mozilla-central/source/accessible/src/base/nsAccessibilityService.cpp#1370) and assertions "No EMBEDS document" (http://mxr.mozilla.org/mozilla-central/source/accessible/src/base/nsRootAccessible.cpp#1071). The case when there is no document accessible is legal because of bug 413778 (we don't create document accessible if it's loading still and it's URL is "about:blank".
| Assignee | ||
Comment 1•17 years ago
|
||
Attachment #343514 -
Flags: review?(aaronleventhal)
Updated•17 years ago
|
Attachment #343514 -
Flags: review?(aaronleventhal) → review+
| Assignee | ||
Comment 2•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•