Bug 460402 - remove extra noise when there is no document accessible, r=aaronlev